--- a/templates/inventory/inventory_index.html.twig
+++ b/templates/inventory/inventory_index.html.twig
@@ -3,16 +3,18 @@
     <table>
         <tr>
             <th>id</th>
-            <th>name</th>
-            <th>weight</th>
+            <th>material</th>
+            <th>person</th>
+            <th>number_of_item</th>
             <th>show</th>
         </tr>
         {% for inventory in tabInventories %}
             <tr>
-                <td>{{inventory.id}}</td>
-                <td>{{inventory.material}}</td>
-                <td>{{inventory.weight}}</td>
-                <td><a href={{ path('app_inventory_show',{'id' : inventory.id})}}><button>show</button></a></td>
+                <td>{{ inventory.id }}</td>
+                <td>{{ inventory.person }}</td>
+                <td>{{ inventory.material }}</td>
+                <td>{{ inventory.numberofitem }}</td>
+                <td><a href={{ path('app_inventory_show',{'id' : inventory.id}) }}><button>show</button></a></td>
             </tr>
         {% endfor %}
     </table>
