--- a/templates/player/player_index.html.twig
+++ b/templates/player/player_index.html.twig
@@ -27,4 +27,5 @@
         {% endfor %}
         </tbody>
     </table>
+    <a href={{ path('reset_list_player') }}><button>God Heal</button></a>
 {% endblock %}
