Ajout des controllers et autres

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {{ include('menu_base.html.twig')  }}
+        {{ include('menu_tp4.html.twig')  }}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
