--- a/templates/menu_tp4.html.twig
+++ b/templates/menu_tp4.html.twig
@@ -1,6 +1,7 @@
 <header>
     <ul>
-        <li><a href={{ path('fight') }}>new_fight</a></li>
-        <li><a href={{ path('player_list') }}>list_players</a></li>
+        <li><a href={{ path('app_item_index') }}>list_items</a></li>
+        <li><a href={{ path('app_player_index') }}>list_players</a></li>
+        <li><a href={{ path('app_player_item_index') }}>list_players_item</a></li>
     </ul>
 </header>
