Correction de la derniere version

--- a/templates/item/item_index.html.twig
+++ b/templates/item/item_index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {{ include('menu_item.html.twig')  }}
+    {{ include('item/menu_item.html.twig')  }}
     <table>
         <tr>
             <th>id</th>
