--- a/templates/player_item/player_item_index.html.twig
+++ b/templates/player_item/player_item_index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+    {{ include('player_item/menu_player_item.html.twig')  }}
     <table>
         <tr>
             <th>id</th>
