--- a/templates/item/item_index.html.twig
+++ b/templates/item/item_index.html.twig
@@ -12,7 +12,7 @@
             <tr>
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
-                <td>{{item.type_item}}</td>
+                <td>{{item.typeitem}}</td>
                 <td><a href={{ path('app_item_show',{'id' : item.id}) }}><button>show</button></a></td>
             </tr>
         {% endfor %}
