--- a/templates/item/item_show.html.twig
+++ b/templates/item/item_show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {{ include('menu_item.html.twig')  }}
+    {{ include('item/menu_item.html.twig')  }}
     <div><strong>{{item.name}}</strong></div>
-    <div><strong>{{item.weight}}</strong></div>
+    <div><strong>{{item.typeitem}}</strong></div>
 {% endblock body %}
