Ajout du Form PlayerType, modification du Player et ajout du fichier PlayerController

--- a/templates/player/player_index.html.twig
+++ b/templates/player/player_index.html.twig
@@ -37,6 +37,7 @@
                 <td>{{player.id}}</td>
                 <td>{{player.name}}</td>
                 <td><a href={{ path('app_player_show',{'id' : player.id}) }}><button>show</button></a></td>
+                <td><a href={{ path('app_player_edit',{'id' : player.id}) }}><button>edit</button></a></td>
             </tr>
         {% endfor %}
     </table>
